--- a/data/literature.tex
+++ b/data/literature.tex
@@ -56,7 +56,7 @@ Chase and Kamara \cite{chase2010structured} extended their definition to more ge
 
 Oblivious RAM (ORAM) allows SSE with no leakage \cite{goldreich1996software}. However, it requires communication rounds and search complexity poly-logarithmic in the database size.To balance the efficiency and security of SSE, almost all of the practical schemes leak information about documents based on current security definition.
 
-The notion of Graph Encryption was introduced in \cite{chase2010structured} as a special case of structured encryption. But not like SSE which is also a sub-category of structured encryption search, the researches about Searchable Graph Encryption are very limited.
+The notion of Graph Encryption was introduced in \cite{chase2010structured} as a special case of structured encryption. But not like SSE, which is also a sub-category of structured encryption search, the researches about Searchable Graph Encryption are very limited.
 In \cite{chase2010structured}, several constructions were proposed to answer Adjacency Queries (give two nodes, do they have a common edge?), Neighbour Queries (get all nodes will a common edge) and Labeled Graph Queries (search graph with some labels in nodes) in encrypted graph. It is obvious that above search functions can not enable the rich functionality on Graph Encryption, and then not suit for Graph Search service.
 
 \subsection{Public Key Searchable Encryption}
