--- a/data/introduction.tex
+++ b/data/introduction.tex
@@ -33,7 +33,7 @@ After providing the research question, the scope will be defined in this section
 As mentioned above, this research aims to design privacy preserving algorithm of Graph Search by using cryptography, it will not design novel cryptographic primitives. 
 
 \section{Contributions}
-This research focuses on the research questions about the privacy issues on Graph Search and solve it by designing cryptography based privacy preserving schemes for Graph Search with rich search functions. 
+This research focuses on the research questions about the privacy issues on Graph Search and solve it by introducing cryptography based privacy preserving schemes for Graph Search with rich search functions. 
 To facilitate cryptography under the searchable requirement of Graph Search, a new model will be designed to enable efficient search over cryptographic protected graph. Several search functions will be adapted on the basis of the model to extend the search ability on encrypted graph. 
 A formal security analysis will be given to verify the security performance of this new model. This analysis plays an important role to justify that users' privacy in graph can be protected under this model and the search functions which are based on it. 
 Once the new model is fully defined, it will be implemented as several privacy preserving schemes and deployed on large scale graph for evaluation in different query use-case. The evaluation serves as a efficiency test by showing the overhead from cryptography is affordable, additionally, it also shows the practicality of the schemes as it supports rich search functions.
