modify the construction part

--- a/data/progress.tex
+++ b/data/progress.tex
@@ -42,19 +42,13 @@ HXT is a more secure SSE protocol that support boolean query functions, and it i
 & Scientific Method & HD \\ \hline
 & Modelling and Computer Simulation & Attended but Missing \\ \hline
 & Design Research & D \\ \hline
-\bf FIT5144 & \bf MGE Monash Graduate Research & \bf 4 hours \\ 
-& \bf Student Induction &  \\ \hline
-\bf FIT5144 & \bf MGE  Research Integrity & \bf 12 hours \\ \hline
-\bf FIT5144 & \bf Faculty of IT Induction & \bf 6 hours \\ \hline
-\bf FIT5144 & \bf Communicating Research & \bf 30 hours\\ \hline
-& Strategies and Plans & completed \\ \hline
-& Academic Audiences & completed \\ \hline
-& Funding Applications & completed \\ \hline
-& Community Audiences & completed \\ \hline
-& Lay Audiences & completed \\ \hline
-\bf FIT5144 & \bf Ethical Research and Publications & \bf 6 hours\\ \hline
-& Philosophical Approaches of Ethic & completed \\ \hline
-& Ethic in Publication and Authorship & completed \\ \hline
+FIT5144 & MGE Monash Graduate Research & 4 hours \\ 
+& Student Induction &  \\ \hline
+FIT5144 & MGE  Research Integrity & 12 hours \\ \hline
+FIT5144 & Faculty of IT Induction & 6 hours \\ \hline
+FIT5144 & Communicating Research & 30 hours\\ \hline
+FIT5144 & Ethical Research and Publications & 6 hours\\ \hline
+FIT5144 & Data61 Reading Group & 20 hours\\ \hline
 \end{tabular}
 \caption{Coursework Activities and Claimed Hours}
 \label{tlb:coursework}
