--- a/data/methodology.tex
+++ b/data/methodology.tex
@@ -1,5 +1,5 @@
 \chapter{Objectives and Methodology}
-As mentioned in the literature review, this research plans to contribute in the field of Searchable Graph Encryption by proposing new Graph Encryption model with rich search functions, and protect OSN users' privacy in Graph Search by using the above model. The detailed objectives and the methodologies are summarised as follows:
+As mentioned in the literature review, this research plans to contribute in the field of Searchable Graph Encryption by proposing new Graph Encryption scheme with rich search functions, and protect OSN users' privacy in Graph Search by using the above scheme. The detailed objectives and the methodologies are summarised as follows:
 \begin{enumerate}
 \setlength{\itemsep}{0pt}
 \item {\bf Searchable Graph Encryption Model:}
