--- a/data/introduction.tex
+++ b/data/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Research Problem}
 \section{Background of Problem}
-OSN is highly popular for many years, and more and more Internet users start to use OSN as their medium of communication: The monthly active user of Facebook is reached 2 billion in 2017, which means over one half Internet users are using the services from Facebook \cite{statista2017facebook, itstat2017population}, and this is just an epitome of the today's OSN dependency.
+Online Social Network (OSN) is highly popular for many years, and more and more Internet users start to use OSN as their medium of communication: The monthly active user of Facebook is reached 2 billion in 2017, which means over one half Internet users are using the services from Facebook \cite{statista2017facebook, itstat2017population}, and this is just an epitome of the today's OSN dependency.
 
 A result of the huge growth of OSN is more and more sensitive personal data is revealed while OSN users enjoy using it. In 2005, two researchers from Carnegie Mellon University conducted a study in the online behaviour of more than 4,000 students in the university who had signed up in Facebook \cite{gross2005information}. In their study, they found that the majority of Facebook users at CMU provided astonishing amount of sensitive information in their Facebook profiles: it may contain their real names (over $90\%$), date of birth ($87\%$), personal images ($80\%$) and so on; actually, privacy preference is provided to OSN user for controlling the visibility and access privilege of their profiles, but it is sparingly used, which makes most of the users searchable and identifiable to the vast majority of anybody else in the network. 
 
@@ -8,7 +8,7 @@ Due to the richness and variety of sensitive information in OSN, the privacy of 
 
 Although the main purposes of OSN are to help its members to communicate with others and maintain social relations in a more convenient way, OSN service providers also design diverse Social Network Services (SNS) for its user interaction virtually: it includes updating activities and location information, sharing multimedia (e.g. photo, video) during some events, getting updates and comments on activities by friends, etc.. All of these services retain a huge amount of data about its users: Until 2013, there were 1.11 billion monthly active users and they put 4.75 billion shared items in Facebook, these contents received over 4.5 billion tags such as 'Likes' from their friends \cite{facebook2013growth}. 
 
-Making these data searchable to further enhance to capabilities of OSN had become a prevailing trend in recent years. In 2013, Facebook introduced their social data search engine -- Graph Search \cite{facebook2013graph}. This search engine aims to return the information based on the content from user's social network of friends and connections (their social circle): For example, users may search ``The restaurants visited by friends live in Melbourne'' to get restaurants recommendation from their friends in Melbourne. The search results are more personally relevant and satisfactory because the results are generated and refined by users' social circle where the people within always have some similar or the same attributes (e.g. geographical location, hobbies, education background etc.) according to ``Homophily'' theory \cite{mcpherson2001birds}. The concept of Graph Search is also introduced by other OSN service provider: LinkedIn has Job Search Engine which is based on users' location, skill as well as the information from their colleague and alumni; WeChat also can search user-specific content from Moments and Official Accounts. 
+Making these data searchable to further enhance the capabilities of OSN had become a prevailing trend in recent years. In 2013, Facebook introduced their social data search engine -- Graph Search \cite{facebook2013graph}. This search engine aims to return the information based on the content from user's social network of friends and connections (their social circle): For example, users may search ``The restaurants visited by friends live in Melbourne'' to get restaurants recommendation from their friends in Melbourne. The search results are more personally relevant and satisfactory because the results are generated and refined by users' social circle where the people within always have some similar or the same attributes (e.g. geographical location, hobbies, education background etc.) according to ``Homophily'' theory \cite{mcpherson2001birds}. The concept of Graph Search is also introduced by other OSN service provider: LinkedIn has Job Search Engine which is based on users' location, skill as well as the information from their colleague and alumni; WeChat also can search user-specific content from Moments and Official Accounts. 
 
 In a nutshell, Graph Search-like search engines are powerful tools from the aspect of search because the search results are from a more reliable source (i.e. social circle) and more user-centric. However, they make user data searchable and then provide an extremely simple way to unearth user sensitive data: For instance, potential adversaries now can easily construct a query like ``People in Melbourne working/traveling outsides'' to find break-in crime targets. As a result, these new social data search engines (``Graph Search'' is used to represent them) cause increasing privacy concerns about OSN to the public, and, to protect user's privacy in the context of Graph Search becomes the main motivation of this research.
 
