--- a/data/progress.tex
+++ b/data/progress.tex
@@ -42,18 +42,18 @@ HXT is a more secure SSE protocol that support boolean query functions, and it i
 & Scientific Method & HD \\ \hline
 & Modelling and Computer Simulation & Attended but Missing \\ \hline
 & Design Research & D \\ \hline
-\bf FIT5144 & \bf Research strategies and skills  & \bf 99.5 hours \\ \hline
-FIT5144 & MGE Monash Graduate Research & 4 hours \\ 
+\bf FIT5144 & \bf Research strategies and skills  & \bf 98.5 hours \\ \hline
+& MGE Monash Graduate Research & 4 hours \\ 
 & Student Induction &  \\ \hline
-FIT5144 & MGE  Research Integrity & 12 hours \\ \hline
-FIT5144 & Faculty of IT Induction & 6 hours \\ \hline
-FIT5144 & Communicating Research & 30 hours\\ \hline
-FIT5144 & Ethical Research and Publications & 6 hours\\ \hline
-FIT5144 & Data61 Reading Group & 20 hours\\ \hline
-FIT5144 & GSAS Workshops & 17 hours\\ \hline
-FIT5144 & HDR Student Consultation Forum & 1.5 hours\\
+& MGE  Research Integrity & 12 hours \\ \hline
+& Faculty of IT Induction & 6 hours \\ \hline
+& Communicating Research & 30 hours\\ \hline
+& Ethical Research and Publications & 6 hours\\ \hline
+& Data61 Reading Group & 20 hours\\ \hline
+& GSAS Workshops & 17 hours\\ \hline
+& HDR Student Consultation Forum & 1.5 hours\\
 & with Dean of IT & \\ \hline
-FIT5144 & Staff Appointment Seminar & 3 hours \\ \hline
+& Staff Appointment Seminar & 2 hours \\ \hline
 \end{tabular}
 \caption{Coursework Activities and Claimed Hours}
 \label{tlb:coursework}
