--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass[oneside, confirmation]{monashreport}
+\documentclass[oneside, thesis]{monashreport}
 \begin{document}
 
 % load author infos
@@ -8,7 +8,6 @@
 \maketitle
 
 % table of contents
-\contentsmatter
 \tableofcontents
 
 % switch to main matter
