Add new files for the thesis template

--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,12 @@
 \documentclass[oneside, thesis]{monashreport}
+
+\usepackage{colortbl}
+\usepackage{fancybox}
+\usepackage{longtable}
+\usepackage{multirow}
+\usepackage{rotating}
+\usepackage{threeparttable}
+
 \begin{document}
 
 % load author infos
